[project]
name = "transformer-load-forecasting"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "darts>=0.38.0",
    "icecream>=2.1.8",
    "matplotlib>=3.10.7",
    "maya>=0.6.1",
    "numpy>=2.3.4",
    "optuna>=4.5.0",
    "pandas>=2.3.3",
    "prophet>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "torch>=2.9.0",
]
